interface para notebooks pronta

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                         <textarea placeholder="Seu texto aqui bb" name="" id="textIn" cols="30" rows="10"></textarea>
                     </div>
                     <div id="result">
-                        <p></p>
+                        <p>O marcos</p>
                     </div>
+                    <p>(click para copiar⬆️)</p>
                 </div>
             </div>
         </div>
