--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Editor 2000</title>
-    <link rel="stylesheet" href="styles/var.css">
-    <link rel="stylesheet" href="styles/fonts.css">
-    <link rel="stylesheet" href="styles/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Text Editor 2000</title>
+  <link rel="stylesheet" href="styles/fonts.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
-    <div id="bg">
-        <div id="container">
-            <div id="right">
-                <h1>Text <br> Editor <br> 2000</h1>
-            </div>
-            <div id="left">
-                <div id="box">
-                    <h3>
-                        EDITAR!
-                    </h3>
-                    <div id="radio-btn">
-                        <label class="container">Inverter!
-                            <input type="checkbox" checked="checked">
-                            <span class="checkmark"></span>
-                          </label>
-                          <label class="container">MAIUSCULO!
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-                          
-                          <label class="container">minusculo!
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-                    </div>
-                    <hr>
-                    <div>
-                        <textarea placeholder="Seu texto aqui bb" name="" id="textIn" cols="30" rows="10"></textarea>
-                    </div>
-                    <div id="result">
-                        <p>O marcos</p>
-                    </div>
-                    <p>(click para copiar⬆️)</p>
-                </div>
-            </div>
+  <div id="bg">
+    <div id="container">
+      <div id="right">
+        <h1>Text <br> Editor <br> 2000</h1>
+      </div>
+      <div id="left">
+        <div id="box">
+          <h2>
+            EDITAR!
+          </h2>
+          <div id="radio-btn">
+            <label class="container">
+              Inverter!
+              <input type="radio" name="func" value="0">
+            </label>
+            <label class="container">
+              MAIUSCULO!
+              <input type="radio" name="func" checked value="0">
+            </label>
+            <label class="container">
+              minusculo!
+              <input type="radio" name="func" value="0">
+            </label>
+          </div>
+          <hr>
+          <div>
+            <textarea placeholder="Seu texto aqui bb" maxlength="100" name="" id="textIn" cols="30" rows="10"></textarea>
+          </div>
+          <div id="textOut">
+            <p> [...] </p>
+          </div>
+          <p>(click para copiar⬆️)</p>
         </div>
+      </div>
     </div>
+  </div>
 </body>
+<script src="js/app.js"></script>
+
 </html>
